SERVER-10351 Log authentication failures for MONGODB-* in the diagnostic log.